--- a/X00194620_Ca3/Layout/MainLayout.razor
+++ b/X00194620_Ca3/Layout/MainLayout.razor
@@ -14,15 +14,17 @@
 
     <MudLayout>
         <MudAppBar Elevation="1">
-            <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-            <MudSpacer />
-            <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
+            <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())"/>
+            <MudSpacer/>
+            <MudText Typo="Typo.h5" Class="mt-1">Exo-Planet Explorer</MudText>
+            <MudSpacer/>
+            <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End"/>
+
         </MudAppBar>
         <MudDrawer @bind-Open="_drawerOpen" Elevation="2">
             <MudDrawerHeader>
-                <MudText Typo="Typo.h5" Class="mt-1">Application</MudText>
+                <MudText Typo="Typo.h5" Class="mt-1">Applications</MudText>
             </MudDrawerHeader>
-            @*NavMenu*@
         </MudDrawer>
         <MudMainContent>
             
