Basic Api Setup

--- a/X00194620_Ca3/Layout/MainLayout.razor
+++ b/X00194620_Ca3/Layout/MainLayout.razor
@@ -27,7 +27,7 @@
     </MudDrawer>
 
     <MudMainContent>
-        @Body   @* THIS is where your pages get injected *@
+        @Body   
     </MudMainContent>
 
 </MudLayout>
