Turned Title White

--- a/X00194620_Ca3/Layout/MainLayout.razor
+++ b/X00194620_Ca3/Layout/MainLayout.razor
@@ -19,15 +19,16 @@
 
         <!-- Title -->
         <MudLink Href="/" Class="cursor-pointer" Style="text-decoration:none;">
-            <MudText Typo="Typo.h5" Color="Color.Inherit">
+            <MudText Typo="Typo.h5" Style="color:white;">
                 Exo-Planet Explorer
             </MudText>
         </MudLink>
 
+
         <MudSpacer/>
 
         <!-- Dark Mode Toggle -->
-        <MudSwitch @bind-Value="_isDarkMode" Color="Color.Primary" Class="ma-4" T="bool"/>
+        <MudSwitch @bind-Value="_isDarkMode" Color="Color.Dark" Class="ma-4" T="bool"/>
 
 
         <!-- More Menu -->
