--- a/X00194620_Ca3/Layout/MainLayout.razor
+++ b/X00194620_Ca3/Layout/MainLayout.razor
@@ -20,7 +20,7 @@
         <!-- Title -->
         <MudLink Href="/" Class="cursor-pointer" Style="text-decoration:none;">
             <MudText Typo="Typo.h5" Style="color:white;">
-                Exo-Planet Explorer
+                Planet Explorer
             </MudText>
         </MudLink>
 
