changes to styling

--- a/X00194620_Ca3/Pages/LaunchPhotos.razor
+++ b/X00194620_Ca3/Pages/LaunchPhotos.razor
@@ -2,8 +2,8 @@
 
 <PageTitle>Launch Photos</PageTitle>
 
-<MudContainer Class="mt-8" MaxWidth="MaxWidth.ExtraLarge">
-    <MudText Typo="Typo.h3" Class="mb-4">Launch Photos Gallery</MudText>
+<MudContainer Class="mt-8">
+    <MudText Typo="Typo.h4" GutterBottom="true">Launch Photos Gallery</MudText>
 
     @if (loading)
     {
