--- a/X00194620_Ca3/Pages/LaunchPhotos.razor
+++ b/X00194620_Ca3/Pages/LaunchPhotos.razor
@@ -14,8 +14,8 @@
         <MudAlert Severity="Severity.Info">No launch photos available</MudAlert>
     }
     else{
-        <MudPaper Class="pa-4 mb-4" Elevation="1">
-            <MudGrid Spacing="2">
+        <MudPaper Class="pa-4 mb-4 d-flex just" Elevation="1">
+            <MudGrid class="d-flex justify-content-around " Spacing="2" xs="12" md="6">
                 <MudItem xs="12" md="6">
                     <MudTextField @bind-Value="SearchText"
                                   Placeholder="Search by mission name..."
@@ -25,7 +25,7 @@
                                   Variant="Variant.Outlined"
                                   Margin="Margin.Dense"/>
                 </MudItem>
-                <MudButtonGroup FullWidth="true" Size="Size.Small" Class="mb-3">
+                <MudButtonGroup Size="Size.Small" Class="mt-4 mb-3 d-flex align-center justify-content-center">
                     <MudButton OnClick="@(() => SetSortOrder(SortOrder.Ascending))"
                                Variant="@(sortOrder == SortOrder.Ascending ? Variant.Filled : Variant.Outlined)"
                                Color="@(sortOrder == SortOrder.Ascending ? Color.Primary : Color.Default)"
@@ -41,11 +41,10 @@
                         Newest
                     </MudButton>
                 </MudButtonGroup>
-                <MudItem xs="12" sm="6" md="3" Class="d-flex align-center">
+                <MudItem xs="12" sm="6" md="3" Class="d-flex align-center ">
                     <MudButton Variant="Variant.Text"
                                OnClick="ClearSearch"
-                               StartIcon="@Icons.Material.Filled.Clear"
-                               FullWidth="true">
+                               StartIcon="@Icons.Material.Filled.Clear">
                         Clear Search
                     </MudButton>
                 </MudItem>
