removed leading slashes

--- a/X00194620_Ca3/Layout/MainLayout.razor
+++ b/X00194620_Ca3/Layout/MainLayout.razor
@@ -15,7 +15,7 @@
 
         <MudSpacer/>
 
-        <MudLink Href="/" Class="cursor-pointer" Style="text-decoration:none;">
+        <MudLink Href="" Class="cursor-pointer" Style="text-decoration:none;">
             <MudText Typo="Typo.h4" Style="color:white;">
                 SpaceX Launches
             </MudText>
@@ -38,15 +38,15 @@
         </MudDrawerHeader>
 
         <MudDrawerContainer>
-            <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">
+            <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">
                 Home
             </MudNavLink>
 
-            <MudNavLink Href="/photos" Icon="@Icons.Material.Filled.PhotoLibrary">
+            <MudNavLink Href="photos" Icon="@Icons.Material.Filled.PhotoLibrary">
                 Launch Photos
             </MudNavLink>
 
-            <MudNavLink Href="/statistics" Icon="@Icons.Material.Filled.BarChart">
+            <MudNavLink Href="statistics" Icon="@Icons.Material.Filled.BarChart">
                 Statistics
             </MudNavLink>
 
