--- a/X00194620_Ca3/Pages/LaunchDetails.razor
+++ b/X00194620_Ca3/Pages/LaunchDetails.razor
@@ -122,7 +122,7 @@
                 </MudPaper>
 
                 @if (launch.Links?.Flickr?.Original?.Any() == true){
-                    <MudPaper Class="pa-4">
+                    <MudPaper ata-test-id="launch-card" Class="pa-4">
                         <MudText Typo="Typo.h6" Class="mb-3">Launch Photos</MudText>
                         <MudGrid Spacing="2">
                             @foreach (var imageUrl in launch.Links.Flickr.Original.Take(6)){
