--- a/X00194620_Ca3/Pages/LaunchPhotos.razor
+++ b/X00194620_Ca3/Pages/LaunchPhotos.razor
@@ -74,7 +74,7 @@
                             <MudButton Variant="Variant.Text"
                                        Color="Color.Primary"
                                        Size="Size.Small"
-                                       Href="@($"./launch/{photo.LaunchId}")">
+                                       Href="@($"/CA3_SpaceXLaunches/launch/{photo.LaunchId}")">
                                 View Launch
                             </MudButton>
                         </MudCardActions>
